--- a/src/pages/TheArea/TheArea.module.css
+++ b/src/pages/TheArea/TheArea.module.css
@@ -119,7 +119,7 @@
   width: 400px;
   height: 168px;
   left: 15%;
-  top: 890px;
+  top: 910px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -214,7 +214,7 @@
   width: 448px;
   height: 40px;
   left: 9%;
-  top: 1800px;
+  top: 1760px;
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -228,7 +228,7 @@
   width: 448px;
   height: 40px;
   left: 15%;
-  top: 1870px;
+  top: 1850px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: normal;
@@ -242,7 +242,7 @@
   width: 448px;
   height: 40px;
   left: 28%;
-  top: 1870px;
+  top: 1850px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: normal;
@@ -256,7 +256,7 @@
   width: 429px;
   height: 181px;
   left: 9%;
-  top: 1900px;
+  top: 1880px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: normal;
@@ -270,7 +270,230 @@
   width: 346px;
   height: 346px;
   left: 60%;
-  top: 1810px;
+  top: 1800px;
 }
 
 /* TODO: сделать 3-ю подсекцию */
+
+.roadimg {
+  position: absolute;
+  width: 346px;
+  height: 346px;
+  left: 9%;
+  top: 2200px;
+}
+
+.drivep {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 50%;
+  top: 2170px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 40px;
+  color: #5b6460;
+}
+
+.p61area {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 50%;
+  top: 2250px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  color: #5b6460;
+  text-decoration: underline;
+}
+
+.p62area {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 63%;
+  top: 2250px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  color: #5b6460;
+}
+
+.p63area {
+  position: absolute;
+  width: 429px;
+  height: 300px;
+  left: 50%;
+  top: 2280px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  color: #5b6460;
+}
+
+.p7area {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 9%;
+  top: 2570px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 40px;
+  color: #5b6460;
+}
+
+.p71area {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 15%;
+  top: 2640px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  color: #5b6460;
+  text-decoration: underline;
+}
+
+.p72area {
+  position: absolute;
+  width: 448px;
+  height: 40px;
+  left: 25%;
+  top: 2640px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  color: #5b6460;
+}
+
+.p73area {
+  position: absolute;
+  width: 429px;
+  height: 300px;
+  left: 10%;
+  top: 2690px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 15px;
+  color: #5b6460;
+}
+
+.townimg {
+  position: absolute;
+  width: 346px;
+  height: 346px;
+  left: 60%;
+  top: 2595px;
+}
+
+/* TODO: сделать 5-ую секцию!!! */
+
+.sec5area {
+  background: url(maparea2.png);
+  width: 1013px;
+  height: 700px;
+  margin-right: -1px;
+  margin-top: 2200px;
+  background-size: 100% 45%;
+  background-repeat: no-repeat;
+}
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  left: 8px;
+  top: 3300px;
+  background: #5b6460;
+  background-size: 100% 45%;
+
+}
+
+.footersp2 {
+  position: absolute;
+  width: 162px;
+  height: 24px;
+  left: 470px;
+  top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footersp4 {
+  position: absolute;
+  width: 162px;
+  height: 24px;
+  left: 660px;
+  top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footersp5 {
+  position: absolute;
+  width: 162px;
+  height: 24px;
+  left: 840px;
+  top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.paypal2 {
+  position: absolute;
+  left: 650px;
+  top: 80px;
+}
+
+.mastercard2 {
+  position: absolute;
+  left: 720px;
+  top: 80px;
+}
+
+.visa2 {
+  position: absolute;
+  left: 780px;
+  top: 80px;
+}
+
+.banktransfer2 {
+  position: absolute;
+  left: 840px;
+  top: 80px;
+}
+
+.content2 {
+  position: absolute;
+  left: 70px;
+  top: 230px;
+  color: white;
+}
