--- a/src/pages/TheHut/TheHut.module.css
+++ b/src/pages/TheHut/TheHut.module.css
@@ -192,3 +192,153 @@
   color: #333333;
 }
 
+.thirdimgthehut {
+  position: absolute;
+  width: 346px;
+  height: 346px;
+  left: 80px;
+  top: 1100px;
+}
+
+.p10thehut {
+  position: absolute;
+  width: 429px;
+  height: 243px;
+  left: 610px;
+  top: 1100px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-size: 40px;
+  font-weight: 300px;
+  line-height: 30px;
+  color: #757575;
+}
+
+.p11thehut {
+  position: absolute;
+  width: 429px;
+  height: 243px;
+  left: 630px;
+  top: 1160px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 300px;
+  line-height: 30px;
+  color: #757575;
+  text-decoration: underline;
+}
+
+.p12thehut {
+  position: absolute;
+  width: 429px;
+  height: 243px;
+  left: 705px;
+  top: 1160px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 300px;
+  line-height: 30px;
+  color: #757575;
+}
+
+.p13thehut {
+  position: absolute;
+  width: 429px;
+  height: 243px;
+  left: 570px;
+  top: 1190px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-size: 12px;
+  font-weight: 300px;
+  line-height: 30px;
+  color: #333333;
+}
+
+footer {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+  left: 0px;
+  top: 1500px;
+  background: #5b6460;
+  background-size: 100% 45%;
+}
+
+.footersp3 {
+  position: absolute;
+  width: 162px;
+  height: 24px;
+  left: 470px;
+  top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footersp9 {
+  position: absolute;
+  width: 162px;
+  height: 24px;
+  left: 660px;
+  top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footersp8 {
+  position: absolute;
+  width: 162px;
+  height: 24px;
+  left: 840px;
+  top: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.paypal3 {
+  position: absolute;
+  left: 650px;
+  top: 80px;
+}
+
+.mastercard3 {
+  position: absolute;
+  left: 720px;
+  top: 80px;
+}
+
+.visa3 {
+  position: absolute;
+  left: 780px;
+  top: 80px;
+}
+
+.banktransfer3 {
+  position: absolute;
+  left: 840px;
+  top: 80px;
+}
+
+.content3 {
+  position: absolute;
+  left: 70px;
+  top: 230px;
+  color: white;
+}
