--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -473,7 +473,9 @@ em {
   top: 2490px;
   background-color: gray;
   border-radius: 30px;
-  padding: 1px;
+  padding: 5px;
+  width: 33px;
+  height: 37px;
 }
 
 .twitter2:hover {
@@ -484,14 +486,14 @@ em {
 
 .facebook2 {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 120px;
+  width: 39px;
+  height: 39px;
+  left: 115px;
   top: 2490px;
   background-color: grey;
   background-size: 130%;
   border-radius: 30px;
-  padding: 1px;
+  padding: 7px;
 }
 
 .facebook2:hover {
@@ -502,14 +504,17 @@ em {
 
 .instagram2 {
   position: absolute;
-  width: 50px;
-  height: 50px;
+  /* width: 50px;
+  height: 50px; */
+  width: 39px;
+  height: 39px;
   left: 35px;
   top: 2490px;
   background-color: grey;
   background-size: 100%;
   border-radius: 30px;
-  padding: 1px;
+  border-width: 50px;
+  padding: 6px;
 }
 
 .instagram2:hover {
