--- a/src/pages/Booking/Booking.module.css
+++ b/src/pages/Booking/Booking.module.css
@@ -335,7 +335,7 @@ em {
   color: #333333;
 }
 
-.i1booking51{
+.i1booking51 {
   position: absolute;
   width: 37.51px;
   height: 0px;
@@ -344,7 +344,7 @@ em {
 
   /* green */
 
-  border-top: 0.7px solid #5B6460;
+  border-top: 0.7px solid #5b6460;
   transform: rotate(90deg);
 }
 
@@ -380,21 +380,73 @@ em {
   color: #333333;
 }
 
-.i2booking51{
+.i2booking51 {
   position: absolute;
   width: 37.51px;
   height: 0px;
   left: 140px;
   top: 25.2px;
-
-  /* green */
-
-  border-top: 0.7px solid #5B6460;
+  border-top: 0.7px solid #5b6460;
   transform: rotate(90deg);
 }
 
-.counter{
-  top: 1000px;
-  left:100%;
-  width:1px;
+.counter {
+  position: absolute;
+  width: 65px;
+  height: 32px;
+  left: 0px;
+  top: 1px;
+}
+
+.counter1 {
+  position: absolute;
+  width: 9px;
+  height: 18px;
+  left: 178px;
+  top: 10px;
+
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 18px;
+}
+
+.button__decrease {
+  background: none;
+  border: none;
+  position: absolute;
+  width: 9px;
+  height: 0px;
+  left: 160px;
+  top: 22px;
+
+  opacity: 0.3;
+}
+
+.button__increase {
+  background: none;
+  border: none;
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  left: 188px;
+  top: 22px;
+  color: #000000;
+}
+
+.p14booking51 {
+  position: absolute;
+  width: 38px;
+  height: 16px;
+  left: 164px;
+  top: calc(50% - 16px / 2 - 10.8px);
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  color: #333333;
 }
